fixed breadcrumbs across all pages

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -30,6 +30,10 @@
   border: 1px solid #d8dde0;
 }
 
+
+.nhsuk-header__navigation-item a:active{
+  box-shadow: inset 0 -4px 0 #d8dde0;
+}
 /* End of swatches for colours page styles */
 
 .example {
