--- a/app/views/design-system/community/index.html
+++ b/app/views/design-system/community/index.html
@@ -7,10 +7,17 @@ Start page template - NHS.UK prototype kit
 {% block beforeContent %}
 
 {{ breadcrumb({
-    href: "/index",
-    text: "Home"
+      items: [
+        {
+          href: "/index",
+          text: "Home"
+        }
+        
+      ],
+       href: "/design-system/community",
+       text: "Community"
+       
 }) }}
-
 
 {% endblock %}
 
