--- a/app/views/design-system/components/navigation.html
+++ b/app/views/design-system/components/navigation.html
@@ -1,9 +1,15 @@
 {% extends 'layouts/layout-bsa-design-system.html' %}
 {% set active = "components" %}
-{% set activesub = "subnav" %}
+{% set activesub = "Sub-navigation" %}
 
 {% block pageTitle %}
 Back - NHSBSA design system
+{% endblock %}
+
+{% block beforeContent %}
+
+{% include "includes/breadcrumbs__components.html" %}
+
 {% endblock %}
 
 {% block content %}
