--- a/app/views/design-system/pages/task-list.html
+++ b/app/views/design-system/pages/task-list.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/layout-bsa-design-system.html' %}
 {% set active = "pages" %}
-{% set activesub = "task-list" %}
+{% set activesub = "Task list" %}
 
 {% block pageTitle %}
 Start page template - NHS.UK prototype kit
@@ -8,10 +8,7 @@ Start page template - NHS.UK prototype kit
 
 {% block beforeContent %}
 
-{{ breadcrumb({
-    href: "/index",
-    text: "Home"
-}) }}
+{% include "includes/breadcrumbs__pages.html" %}
 
 {% endblock %}
 
