--- a/app/views/design-system/patterns/case-summary.html
+++ b/app/views/design-system/patterns/case-summary.html
@@ -6,6 +6,12 @@
 Case summary - NHSBSA design system
 {% endblock %}
 
+{% block beforeContent %}
+
+{% include "includes/breadcrumbs__patterns.html" %}
+
+{% endblock %}
+
 {% block content %}
 
 {% include "includes/left-pane__patterns.html" %}
