--- a/app/views/design-system/patterns/enquiry.html
+++ b/app/views/design-system/patterns/enquiry.html
@@ -1,10 +1,16 @@
 {% extends 'layouts/layout-bsa-design-system.html' %}
 
 {% set active = "patterns" %}
-{% set activesub = "enquiry" %}
+{% set activesub = "Enquiry" %}
 
 {% block pageTitle %}
 Check and confirm - NHSBSA design system
+{% endblock %}
+
+{% block beforeContent %}
+
+{% include "includes/breadcrumbs__patterns.html" %}
+
 {% endblock %}
 
 {% block content %}
