--- a/app/views/design-system/patterns/postcode.html
+++ b/app/views/design-system/patterns/postcode.html
@@ -1,9 +1,15 @@
 {% extends 'layouts/layout-bsa-design-system.html' %}
 {% set active = "patterns" %}
-{% set activesub = "postcode" %}
+{% set activesub = "Postcode" %}
 
 {% block pageTitle %}
 Postcode lookup - NHSBSA design system
+{% endblock %}
+
+{% block beforeContent %}
+
+{% include "includes/breadcrumbs__patterns.html" %}
+
 {% endblock %}
 
 {% block content %}
