--- a/app/views/design-system/resources/index.html
+++ b/app/views/design-system/resources/index.html
@@ -6,12 +6,18 @@ Start page template - NHS.UK prototype kit
 
 {% block beforeContent %}
 
-
-  {{ breadcrumb({
-      href: "/index",
-      text: "Home"
-  }) }}
-
+{{ breadcrumb({
+      items: [
+        {
+          href: "/index",
+          text: "Home"
+        }
+        
+      ],
+       href: "/design-system/resources",
+       text: "Resources"
+       
+}) }}
 
 {% endblock %}
 
