--- a/app/views/design-system/resources/prototyping.html
+++ b/app/views/design-system/resources/prototyping.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/layout-bsa-design-system.html' %}
 {% set active = "resoucres" %}
-{% set activesub = "prototype" %}
+{% set activesub = "Prototyping" %}
 
 {% block pageTitle %}
 Start page template - NHS.UK prototype kit
@@ -8,13 +8,7 @@ Start page template - NHS.UK prototype kit
 
 {% block beforeContent %}
 
-
-{{ breadcrumb({
-    href: "/index",
-    text: "Home"
-}) }}
-
-
+{% include "includes/breadcrumbs__resources.html" %}
 
 {% endblock %}
 
