--- a/app/views/includes/left-pane__contribute.html
+++ b/app/views/includes/left-pane__contribute.html
@@ -14,13 +14,14 @@
 <nav class="app-subnav">
 <ul class="app-subnav__section"> 
 -->
-      <li{% if activesub == "backlog" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+<h2>Community</h2>
+      <li{% if activesub == "Backlog" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/community/backlog">Backlog</a>
       </li>
-      <li{% if activesub == "contribute" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Contribute" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/community/contribute">Contribute</a>
       </li>
-      <li{% if activesub == "using" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Using patterns" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/community/using-patterns">Using the system</a>
       </li>
     </ul>
