--- a/app/views/includes/left-pane__pages.html
+++ b/app/views/includes/left-pane__pages.html
@@ -14,31 +14,32 @@
 <nav class="app-subnav">
 <ul class="app-subnav__section">
 -->
-  <li{% if activesub == "name" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+<h2>Page Examples</h2>
+  <li{% if activesub == "Name" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
     <a class="app-subnav__link nhsuk-link" href="/design-system/pages/name">Name</a>
   </li>
-  <li{% if activesub == "address" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+  <li{% if activesub == "Address" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
     <a class="app-subnav__link nhsuk-link" href="/design-system/pages/address">Address</a>
   </li>
-  <li{% if activesub == "date-of-birth" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+  <li{% if activesub == "Date of birth" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
     <a class="app-subnav__link nhsuk-link" href="/design-system/pages/date-of-birth">Date of birth</a>
   </li>
-  <li{% if activesub == "nhs-number" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+  <li{% if activesub == "NHS number" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
     <a class="app-subnav__link nhsuk-link" href="/design-system/pages/nhs-number">NHS number</a>
   </li>
-  <li{% if activesub == "end-page" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+  <li{% if activesub == "End page" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
     <a class="app-subnav__link nhsuk-link" href="/design-system/pages/end-page">End page</a>
   </li>
-  <li{% if activesub == "feedback" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+  <li{% if activesub == "Feedback" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
     <a class="app-subnav__link nhsuk-link" href="/design-system/pages/feedback">Feedback</a>
   </li>
-  <li{% if activesub == "error-message" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+  <li{% if activesub == "Error message" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
     <a class="app-subnav__link nhsuk-link" href="/design-system/pages/error-messages">Error messages</a>
   </li>
-  <li{% if activesub == "task-list" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+  <li{% if activesub == "Task list" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
     <a class="app-subnav__link nhsuk-link" href="/design-system/pages/task-list">Task list</a>
   </li>
-  <li{% if activesub == "answers" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+  <li{% if activesub == "Check your answers" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
     <a class="app-subnav__link nhsuk-link" href="/design-system/pages/check-your-answers">Check your answers</a>
   </li>
 </ol>
