--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -14,7 +14,7 @@
 
 <!-- Set the page title inside the pageTitle block -->
 {% block pageTitle %}
-  NHS.UK prototype kit
+  NHSBSA design system
 {% endblock %}
 
 <!-- Header goes inside the header block -->
@@ -22,7 +22,7 @@
 {% block header %}
   {{ header({
     "service": {
-        "name": "BSA Design System",
+        "name": "BSA design System",
         "href": "/"
       },
       "showNav": "false",
