--- a/app/views/layouts/layout-bsa-design-system.html
+++ b/app/views/layouts/layout-bsa-design-system.html
@@ -11,6 +11,10 @@
 <!-- Header goes inside this block -->
 {% block header %}
   {{ header({
+    "service": {
+      "name": "BSA Design System", 
+      "longName": "true"
+    },
       "showNav": "true",
       "showSearch": "true",
       "primaryLinks": [
