--- a/app/views/design-system/components/alerts.html
+++ b/app/views/design-system/components/alerts.html
@@ -1,10 +1,18 @@
 {% extends 'layouts/layout-bsa-design-system.html' %}
 {% set active = "components" %}
-{% set activesub = "alerts" %}
+{% set activesub = "Alerts" %}
+
 
 {% block pageTitle %}
 Alerts - NHSBSA design system
 {% endblock %}
+
+{% block beforeContent %}
+
+{% include "includes/breadcrumbs__components.html" %}
+
+{% endblock %}
+
 
 {% block content %}
 
