--- a/app/views/design-system/components/currency.html
+++ b/app/views/design-system/components/currency.html
@@ -1,9 +1,15 @@
 {% extends 'layouts/layout-bsa-design-system.html' %}
 {% set active = "components" %}
-{% set activesub = "alerts" %}
+{% set activesub = "Currency" %}
 
 {% block pageTitle %}
 Alerts - NHSBSA design system
+{% endblock %}
+
+{% block beforeContent %}
+
+{% include "includes/breadcrumbs__components.html" %}
+
 {% endblock %}
 
 {% block content %}
