--- a/app/views/design-system/components/status.html
+++ b/app/views/design-system/components/status.html
@@ -1,10 +1,17 @@
 {% extends 'layouts/layout-bsa-design-system.html' %}
 {% set active = "components" %}
-{% set activesub = "status" %}
+{% set activesub = "Status" %}
 
 {% block pageTitle %}
 Back - NHSBSA design system
 {% endblock %}
+
+{% block beforeContent %}
+
+{% include "includes/breadcrumbs__components.html" %}
+
+{% endblock %}
+
 
 {% block content %}
 
