--- a/app/views/design-system/pages/date-of-birth.html
+++ b/app/views/design-system/pages/date-of-birth.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/layout-bsa-design-system.html' %}
 {% set active = "pages" %}
-{% set activesub = "date-of-birth" %}
+{% set activesub = "Date of birth" %}
 
 {% block pageTitle %}
 Start page template - NHS.UK prototype kit
@@ -8,12 +8,7 @@ Start page template - NHS.UK prototype kit
 
 {% block beforeContent %}
 
-
-{{ breadcrumb({
-      href: "/index",
-      text: "Home"
-  }) }}
-
+{% include "includes/breadcrumbs__pages.html" %}
 
 {% endblock %}
 
