--- a/app/views/design-system/patterns/interruption-card.html
+++ b/app/views/design-system/patterns/interruption-card.html
@@ -1,9 +1,15 @@
 {% extends 'layouts/layout-bsa-design-system.html' %}
 {% set active = "patterns" %}
-{% set activesub = "interruption" %}
+{% set activesub = "Interruption card" %}
 
 {% block pageTitle %}
 Interruption card - NHSBSA design system
+{% endblock %}
+
+{% block beforeContent %}
+
+{% include "includes/breadcrumbs__patterns.html" %}
+
 {% endblock %}
 
 {% block content %}
