--- a/app/views/design-system/patterns/question-funnel.html
+++ b/app/views/design-system/patterns/question-funnel.html
@@ -1,10 +1,16 @@
 {% extends 'layouts/layout-bsa-design-system.html' %}
 
 {% set active = "patterns" %}
-{% set activesub = "loops" %}
+{% set activesub = "Multiple loops" %}
 
 {% block pageTitle %}
 Multiple loops - NHSBSA design system
+{% endblock %}
+
+{% block beforeContent %}
+
+{% include "includes/breadcrumbs__patterns.html" %}
+
 {% endblock %}
 
 {% block content %}
