--- a/app/views/design-system/styles/bsa-header.html
+++ b/app/views/design-system/styles/bsa-header.html
@@ -6,12 +6,18 @@ Start page template - NHS.UK prototype kit
 
 {% block beforeContent %}
 
-<!--
-  {{ breadcrumb({
-      href: "/diat/design-system-home",
-      text: "Design System"
-  }) }}
--->
+{{ breadcrumb({
+  items: [
+    {
+      href: "/index",
+      text: "Home"
+    }
+    
+  ],
+   href: "/design-system/styles",
+   text: "Styles"
+   
+}) }}
 
 {% endblock %}
 
