--- a/app/views/design-system/styles/index.html
+++ b/app/views/design-system/styles/index.html
@@ -7,8 +7,16 @@ Start page template - NHS.UK prototype kit
 {% block beforeContent %}
 
 {{ breadcrumb({
-    href: "/index",
-    text: "Home"
+      items: [
+        {
+          href: "/index",
+          text: "Home"
+        }
+        
+      ],
+       href: "/design-system/styles",
+       text: "Styles"
+       
 }) }}
 
 {% endblock %}
