--- a/app/views/design-system/styles/styles/footer.html
+++ b/app/views/design-system/styles/styles/footer.html
@@ -9,7 +9,7 @@ Footer - NHS Business Services Authority design system
 {% block content %}
 
 {% include "includes/left-pane__styles.html" %}
-
+<div class="nhsuk-grid-column-two-thirds">
 <div class="app-pane__content">
   <main class="app-content" id="main-content">
     <div class="app-prose-scope">
@@ -54,6 +54,7 @@ Footer - NHS Business Services Authority design system
 
     </div>
   </main>
+</div>
 </div>
 
 {% endblock %}
