--- a/app/views/includes/left-pane__patterns.html
+++ b/app/views/includes/left-pane__patterns.html
@@ -12,40 +12,41 @@
 <!-- <div class="app-pane__subnav app-hide-mobile ">
   <nav class="app-subnav">
     <ul class="app-subnav__section"> -->
-      <li{% if activesub == "check" %} class="active app-subnav__section-item app-subnav__section-item--current active"{% endif %}>
+      <h2>Patterns</h2>
+      <li{% if activesub == "Check and confirm" %} class="active app-subnav__section-item app-subnav__section-item--current active"{% endif %}>
         <a class="app-subnav__link nhsuk-link"  href="/design-system/patterns/confirmation-loop">Check and confirm</a>
       </li>
-      <li{% if activesub == "help" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Help" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/help">Contextual help</a>
       </li>
-      <li{% if activesub == "enquiry" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Enquiry" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/enquiry">Enquiry form</a>
       </li>
-      <li{% if activesub == "error" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Error page" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/error-pages">Error pages</a>
       </li>
-      <li{% if activesub == "guide-image" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Guidance image" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/guidance-image">Guidance images</a>
       </li>
-      <li{% if activesub == "auth" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Authentication" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/identifying-users">Identifying users</a>
       </li>
-      <li{% if activesub == "interruption" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Interruption card" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/interruption-card">Interruption card</a>
       </li>
-      <li{% if activesub == "leave" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Leaving a service" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/sign-out">Leaving a service</a>
       </li>
-      <li{% if activesub == "modal" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Modal window" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/modal">Modal window</a>
       </li>
-      <li{% if activesub == "loops" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Multiple loops" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/multiple-loops">Multiple loops</a>
       </li>
-      <li{% if activesub == "postcode" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Postcode" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/postcode">Postcode lookup</a>
       </li>
-      <li{% if activesub == "upload" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Upload a file" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/upload-file">Uploading (adding) files</a>
       </li>
     </ul>
