--- a/app/views/includes/left-pane__resources.html
+++ b/app/views/includes/left-pane__resources.html
@@ -12,19 +12,20 @@
 <!-- <div class="app-pane__subnav app-hide-mobile ">
   <nav class="app-subnav">
     <ul class="app-subnav__section"> -->
-      <li{% if activesub == "accessibility" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <h2>Resources</h2>
+      <li{% if activesub == "Accessibility" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/resources/accessibility">Accessibility</a>
       </li>
-      <li{% if activesub == "nhsuk" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "NHS UK" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/resources/nhsuk">NHS.UK</a>
       </li>
-      <li{% if activesub == "govuk" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "GOV UK" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/resources/gov">GOV.UK</a>
       </li>
-      <li{% if activesub == "prototype" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Prototyping" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/resources/prototyping">Prototyping</a>
       </li>
-      <li{% if activesub == "template" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Templating" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/resources/templates">Templates</a>
       </li>
 
