--- a/app/views/includes/left-pane__styles.html
+++ b/app/views/includes/left-pane__styles.html
@@ -1,6 +1,6 @@
 <div class="nhsuk-grid-column-one-third">
   <div class="article-section-nav-outer-wrapper">
-      <div id="sticky-nav" class="" style="">
+      <div id="sticky-nav" class="" style="" >
           <div class="inner-wrapper-sticky" style="position: relative; transform: translate3d(0px, 0px, 0px);">
               <div class="article-section-nav-wrapper">
                   <div class="article-section-nav">
@@ -11,16 +11,17 @@
 <!-- <div class="app-pane__subnav app-hide-mobile ">
   <nav class="app-subnav">
     <ul class="app-subnav__section"> -->
-      <li{% if activesub == "colour" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <h2>Styles</h2>
+      <li{% if activesub == "Colour" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/styles/colours">Colour</a>
       </li>
-      <li{% if activesub == "icons" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Icons" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/styles/icon-usage">Icons</a>
       </li>
-      <li{% if activesub == "images" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Images" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/styles/images">Images and illustrations</a>
       </li>
-      <li{% if activesub == "typography" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+      <li{% if activesub == "Typography" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/styles/typog">Typography</a>
       </li>
     </ul>
