Cleanup Sass imports - added case component for macro creation, unfinished

--- a/app/views/design-system/components/index.html
+++ b/app/views/design-system/components/index.html
@@ -31,7 +31,7 @@ Start page template - NHS.UK prototype kit
 
         <p class="nhsuk-body-l">Components are ready-made interface elements that can be used in  different patterns and layouts. They are part of our visual language and are intended to be used unchanged for a consistent user experience.</p>
         
-        <p>These components extend those used across Government in the <a href="https://design-system.service.gov.uk/components/">GOV.UK design system</a>. As our components mature, we will look to contribute them to the GOV.UK system so they can be used more widely.</p>
+        <p>These components extend those used in the <a href="https://service-manual.nhs.uk/design-system/components">NHS Digital service manual</a>. As our components mature, we will look to contribute them to the NHS Digital service manual so they can be used more widely.</p>
       </div>
 
     </div>
