added mys components

--- a/app/views/includes/left-pane__components.html
+++ b/app/views/includes/left-pane__components.html
@@ -5,6 +5,7 @@
                     <div class="article-section-nav-wrapper">
                         <div class="article-section-nav">
                             <nav id="toc" class="js-toc-list toc__list">
+                              <h2>Components</h2>
                                 <ol class="article-section-nav__list">
  
 
@@ -14,7 +15,7 @@
   <nav class="app-subnav">
     <ul class="app-subnav__section">
 -->
-<h2>Components</h2>
+
       <li{% if activesub == "Alerts" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/alerts">Alerts</a>
       </li>
@@ -63,7 +64,24 @@
       <li{% if activesub == "Timeline" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/timeline">Timeline</a>
       </li>
-
+    </ol>
+    <h2 class="header-space">Custom components (MYS)</h2>
+    <ol class="article-section-nav__list">
+      <li{% if activesub == "Case" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+        <a class="app-subnav__link nhsuk-link" href="/design-system/components/cases-mys">Case</a>
+      </li>
+      <li{% if activesub == "Panel" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+        <a class="app-subnav__link nhsuk-link" href="/design-system/components/panel-mys">Panel</a>
+      </li>
+      <li{% if activesub == "Promo" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+        <a class="app-subnav__link nhsuk-link" href="/design-system/components/promo-cards-mys">Promo</a>
+      </li>
+      <li{% if activesub == "Declaration" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+        <a class="app-subnav__link nhsuk-link" href="/design-system/components/declaration-mys">Declaration</a>
+      </li>
+      <li{% if activesub == "Verification table" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+        <a class="app-subnav__link nhsuk-link" href="/design-system/components/verification-table-mys">Verification table</a>
+      </li>
     </ol>
   </nav>
 </div>
