--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -2,9 +2,14 @@
 @import 'node_modules/nhsuk-frontend/packages/nhsuk';
 
 // Components that are not in the NHS.UK frontend library
- @import 'components/_confirm-pages';
- @import 'components/_timeline';
+@import 'components/_confirm-pages';
+@import 'components/_timeline';
 @import 'components/_currency';
+@import 'components/_cases-mys';
+@import 'components/_declaration-mys';
+@import 'components/_panel-mys';
+@import 'components/_promo-cards-mys';
+@import 'components/_grid';
 //@import 'includes/components/panel-confirmation';
 //@import 'components/related-nav';
 
@@ -34,6 +39,7 @@
 .nhsuk-header__navigation-item a:active{
   box-shadow: inset 0 -4px 0 #d8dde0;
 }
+
 /* End of swatches for colours page styles */
 
 .example {
@@ -803,4 +809,10 @@ details summary {
     }
   }
 
+}
+
+
+.header-space {
+  margin-top: 12px;
+  margin-bottom: 12px;
 }
