--- a/app/views/includes/left-pane__components.html
+++ b/app/views/includes/left-pane__components.html
@@ -81,6 +81,9 @@
       <li{% if activesub == "Verification table" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/components/verification-table-mys">Verification table</a>
       </li>
+      <li{% if activesub == "Side menu" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+        <a class="app-subnav__link nhsuk-link" href="/design-system/components/custom/side-menu">Side menu</a>
+      </li>
     </ol>
   </nav>
 </div>
