--- a/app/views/includes/left-pane__styles.html
+++ b/app/views/includes/left-pane__styles.html
@@ -24,6 +24,9 @@
       <li{% if activesub == "Typography" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
         <a class="app-subnav__link nhsuk-link" href="/design-system/styles/typog">Typography</a>
       </li>
+      <li{% if activesub == "Fullwidth" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+        <a class="app-subnav__link nhsuk-link" href="/design-system/styles/fullwidth">Full Width</a>
+      </li>
     </ul>
   </nav>
 </div>
