Removing unwanted files and giving a refresh

--- a/app/views/design-system/components/test.html
+++ b/app/views/design-system/components/test.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/layout-bsa-design-system.html' %}
 {% set active = "components" %}
-{% set activesub = "Back link" %}
+{% set activesub = "Test" %}
 
 {% block pageTitle %}
 Back - NHSBSA design system
