--- a/app/views/design-system/patterns/task-list.html
+++ b/app/views/design-system/patterns/task-list.html
@@ -1,6 +1,6 @@
 {% extends 'layouts/layout-bsa-design-system.html' %}
 {% set active = "pages" %}
-{% set activesub = "Address" %}
+{% set activesub = "Task list" %}
 
 {% block pageTitle %}
 Start page template - NHS.UK prototype kit
@@ -8,19 +8,19 @@ Start page template - NHS.UK prototype kit
 
 {% block beforeContent %}
 
-{% include "includes/breadcrumbs__pages.html" %}
+{% include "includes/breadcrumbs__patterns.html" %}
 
 {% endblock %}
 
 {% block content %}
 
     <div class="nhsuk-grid-row">
-        {% include "includes/left-pane__pages.html" %}
+        {% include "includes/left-pane__patterns.html" %}
         
         
         <div class="nhsuk-grid-column-two-thirds">
         <span class="nhsuk-caption-xl">Patterns</span>
-          <h1 class="heading-section">Address</h1>
+          <h1 class="heading-section">Task list</h1>
           <p class="nhsuk-body-l">example of component on a page.</p>
         
     <h3 class="nhsuk-u-visually-hidden"></h3>
