--- a/app/views/includes/left-pane__components.html
+++ b/app/views/includes/left-pane__components.html
@@ -1,93 +1,21 @@
-    <div class="nhsuk-grid-column-one-third">
-        <div class="article-section-nav-outer-wrapper">
-            <div id="sticky-nav" class="" style="">
-                <div class="inner-wrapper-sticky" style="position: relative; transform: translate3d(0px, 0px, 0px);">
-                    <div class="article-section-nav-wrapper">
-                        <div class="article-section-nav">
-                            <nav id="toc" class="js-toc-list toc__list">
-                              <h2>Components</h2>
-                                <ol class="article-section-nav__list">
- 
-
- 
-<!--
- <div class="app-pane__subnav app-hide-mobile">
-  <nav class="app-subnav">
-    <ul class="app-subnav__section">
--->
-      <li{% if activesub == "Alerts" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/alerts">Alerts</a>
-      </li>
-      <li{% if activesub == "Back link" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/back">Back link</a>
-      </li>
-      <li{% if activesub == "Buttons" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/buttons">Buttons</a>
-      </li>
-      <li{% if activesub == "Checkboxes" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/checkboxes">Checkboxes</a>
-      </li>
-      <li{% if activesub == "Confirmation page" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/confirm-pages">Confirmation pages</a>
-      </li>
-      <li{% if activesub == "Highlights" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/highlighting-matches">Highlighted search matches</a>
-      </li>
-      <!-- <li{% if activesub == "icons" %} class="app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/components/icons">Icons</a>
-      </li> -->
-      <li{% if activesub == "Labels" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/labels">Labels</a>
-      </li>
-      <li{% if activesub == "Pagination" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/pagination">Pagination</a>
-      </li>
-      <li{% if activesub == "Radios" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/radios">Radio buttons</a>
-      </li>
-      <li{% if activesub == "Side tab" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/side-tab">Side menu</a>
-      </li>
-      <li{% if activesub == "Status" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/status">Status</a>
-      </li>
-      <li{% if activesub == "Sub-navigation" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/navigation">Sub-navigation</a>
-      </li>
-      <li{% if activesub == "Multiselect" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/table-multiselect">Table multi-select</a>
-      </li>
-    <li{% if activesub == "Tabs" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/tabs">Tabs</a>
-      </li>
-      <li{% if activesub == "Timeline" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/timeline">Timeline</a>
-      </li>
-    </ol>
-    <h2 class="header-space">Custom components (MYS)</h2>
-    <ol class="article-section-nav__list">
-      <li{% if activesub == "Case" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/cases-mys">Case</a>
-      </li>
-      <li{% if activesub == "Panel" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/panel-mys">Panel</a>
-      </li>
-      <li{% if activesub == "Promo" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/promo-cards-mys">Promo</a>
-      </li>
-      <li{% if activesub == "Declaration" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/declaration-mys">Declaration</a>
-      </li>
-      <li{% if activesub == "Verification table" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
-        <a class="app-subnav__link nhsuk-link" href="/design-system/components/verification-table-mys">Verification table</a>
-      </li>
-    </ol>
-  </nav>
-</div>
-
-
-                    </div>
-                </div>
-            </div>
+<div class="nhsuk-grid-column-one-third">
+  <div class="article-section-nav-outer-wrapper">
+    <div id="sticky-nav" class="" style="">
+      <div class="inner-wrapper-sticky" style="position: relative; transform: translate3d(0px, 0px, 0px);">
+        <div class="article-section-nav-wrapper">
+          <div class="article-section-nav">
+            <nav id="toc" class="js-toc-list toc__list">
+              <h2>Components</h2>
+              <ul class="article-section-nav__list">
+                <li{% if activesub=="Test" %}
+                  class="active app-subnav__section-item app-subnav__section-item--current" {% endif %}>
+                  <a class="app-subnav__link nhsuk-link" href="/design-system/components/Test">Test</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
+      </div>
+    </div>
+  </div>
 </div>
