--- a/app/views/includes/left-pane__patterns.html
+++ b/app/views/includes/left-pane__patterns.html
@@ -50,6 +50,44 @@
         <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/upload-file">Uploading (adding) files</a>
       </li>
     </ul>
+    <ul class="article-section-nav__list">
+
+
+
+<!--
+<div class="app-pane__subnav app-hide-mobile">
+<nav class="app-subnav">
+<ul class="app-subnav__section">
+-->
+<h2>Pages</h2>
+  <li{% if activesub == "Name" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+    <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/name">Name</a>
+  </li>
+  <li{% if activesub == "Address" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+    <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/address">Address</a>
+  </li>
+  <li{% if activesub == "Date of birth" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+    <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/date-of-birth">Date of birth</a>
+  </li>
+  <li{% if activesub == "NHS number" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+    <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/nhs-number">NHS number</a>
+  </li>
+  <li{% if activesub == "End page" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+    <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/end-page">End page</a>
+  </li>
+  <li{% if activesub == "Feedback" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+    <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/feedback">Feedback</a>
+  </li>
+  <li{% if activesub == "Error message" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+    <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/error-messages">Error messages</a>
+  </li>
+  <li{% if activesub == "Task list" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+    <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/task-list">Task list</a>
+  </li>
+  <li{% if activesub == "Check your answers" %} class="active app-subnav__section-item app-subnav__section-item--current"{% endif %}>
+    <a class="app-subnav__link nhsuk-link" href="/design-system/patterns/check-your-answers">Check your answers</a>
+  </li>
+</ul>
   </nav>
 </div>
 
